
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.kaddath.apps</groupId>
    <artifactId>fluxx</artifactId>
    <packaging>war</packaging>
    <version>1.0</version>
    <name>Fluxx</name>
    <url>http://www.fluxx.fr.cn/</url>
    
    <properties>
        <junit-version>4.7</junit-version>
        <eclipselink-version>2.0.0</eclipselink-version>
        <glassfish-version>3.0</glassfish-version>
        <sl4j-version>1.5.6</sl4j-version>
        <jsf-version>2.0</jsf-version>
        <rome-version>0.9</rome-version>
        <log4j-version>1.2.14</log4j-version>
        <commons-lang-version>2.3</commons-lang-version>
        <hibernate-validator-version>4.0.2.GA</hibernate-validator-version>
        <environment-name>development</environment-name>
    </properties>

    <scm>
        <connection>scm:git://github.com/jsmadja/fluxx.git</connection>
        <developerConnection>scm:git://github.com/jsmadja/fluxx.git</developerConnection>
    </scm>

    <profiles>
        <profile>
            <id>continuous-integration</id>
        </profile>
        <profile>
            <id>production</id>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <version>2.2.0</version>
            <artifactId>ehcache-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>${hibernate-validator-version}</version>
        </dependency>
        <dependency>
            <groupId>javax.faces</groupId>
            <artifactId>jsf-api</artifactId>
            <version>${jsf-version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>rome</groupId>
            <artifactId>rome</artifactId>
            <version>${rome-version}</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>${commons-lang-version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>javax.persistence</artifactId>
            <version>${eclipselink-version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>eclipselink</artifactId>
            <version>${eclipselink-version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.ejb</artifactId>
            <version>${glassfish-version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.extras</groupId>
            <artifactId>glassfish-embedded-all</artifactId>
            <version>${glassfish-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>6.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jdom</groupId>
            <artifactId>jdom</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>net.unto.twitter</groupId>
            <artifactId>java-twitter</artifactId>
            <version>0.9-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.rosaloves</groupId>
            <artifactId>bitlyj</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>r06</version>
        </dependency>
        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <artifactId>ehcache-core</artifactId>
            <version>2.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.5</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${sl4j-version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${sl4j-version}</version>
        </dependency>
    </dependencies>
    <build>
        <sourceDirectory>${basedir}/src/java</sourceDirectory>
        <testSourceDirectory>${basedir}/test</testSourceDirectory>
        <resources>
            <resource>
                <directory>${basedir}/src/etc/${environment-name}/conf</directory>
                <targetPath>META-INF</targetPath>
            </resource>
            <resource>
                <directory>${basedir}/src/resources</directory>
            </resource>
        </resources>
        <outputDirectory>${basedir}/target/classes</outputDirectory>
        <testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <inherited>true</inherited>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <version>2.3.1</version>
                    <compilerArgument>-Djava.endorsed.dirs=${glassfish-home}/modules/endorsed</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <warName>fluxx</warName>
                    <webappDirectory>${basedir}/web</webappDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>glassfish-maven-repository.dev.java.net</id>
            <name>GlassFish Maven Repository</name>
            <url>http://download.java.net/maven/glassfish</url>
        </repository>
        <repository>
            <id>EclipseLink Repo</id>
            <name>Eclipse maven repository http://eclipse.ialto.org/rt/eclipselink/maven.repo/</name>
            <url>http://mirror.csclub.uwaterloo.ca/eclipse/rt/eclipselink/maven.repo/</url>
        </repository>
        <repository>
            <id>java-twitter-repository</id>
            <url>http://java-twitter.googlecode.com/svn/repository/</url>
            <name>java-twitter maven repository</name>
        </repository>
        <repository>
            <id>bitly-repository</id>
            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
            <name>java-bitly maven repository</name>
        </repository>
        <repository>
            <id>Maven2</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Maven2</name>
        </repository>
        <repository>
            <id>Maven2 Repo 2</id>
            <url>http://repo2.maven.org/maven2</url>
            <name>Maven2 Repo 2</name>
        </repository>
        <repository>
            <id>JBoss</id>
            <url>http://repository.jboss.com/maven2</url>
            <name>JBoss</name>
        </repository>
        <repository>
            <id>Java</id>
            <url>http://download.java.net/maven/2/</url>
            <name>Java</name>
        </repository>
        <repository>
            <id>sourceforge</id>
            <url>http://oss.sonatype.org/content/groups/sourceforge/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>

    </repositories>
</project>
